<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserAccess.RegisterActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/Register"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/Email"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/Enter_password"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/edit_setpassword"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/Confirm_password"
                android:textColor="@color/black"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/edit_resetpassword"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/Confirm"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="120dp"
            android:text="@string/Cancel"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>